latest model updates

--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -367,34 +367,168 @@
       "Use tf.cast instead.\n",
       "Train on 111699 samples, validate on 47872 samples\n",
       "Epoch 1/3\n",
-      " 10528/111699 [=>............................] - ETA: 27:34 - loss: 0.2594 - acc: 0.9182"
+      "111699/111699 [==============================] - 1872s 17ms/step - loss: 0.1388 - acc: 0.9529 - val_loss: 0.1044 - val_acc: 0.9621\n",
+      "Epoch 2/3\n",
+      "111699/111699 [==============================] - 2025s 18ms/step - loss: 0.0792 - acc: 0.9698 - val_loss: 0.1018 - val_acc: 0.9638\n",
+      "Epoch 3/3\n",
+      "111699/111699 [==============================] - 1793s 16ms/step - loss: 0.0533 - acc: 0.9795 - val_loss: 0.1214 - val_acc: 0.9602\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1c2f46a400>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#first run through didn't specify a batch size, probably do that\n",
+    "#on the next try. \n",
+    "model.fit(data, np.array(y_train['toxic']), validation_split=.3, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model_toxic to disk\n"
      ]
     }
    ],
    "source": [
-    "model.fit(data, np.array(y_train['toxic']), validation_split=.3, epochs=3)"
+    "model_toxic_json = model.to_json()\n",
+    "with open(\"model_toxic.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_toxic_json)\n",
+    "# serialize weights to HDF5\n",
+    "model.save_weights(\"model_toxic.h5\")\n",
+    "print(\"Saved model_toxic to disk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63978/63978 [==============================] - 91s 1ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "#score on the test set! \n",
+    "score = model.evaluate(test_data, y_test['toxic'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toxic label acc: 91.06%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"toxic label %s: %.2f%%\" % (model.metrics_names[1], score[1]*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train models for all the other labels \n",
+    "y_train\n",
+    "labels = y_train.columns\n",
+    "labels\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================================\n",
+      "====================================\n",
+      "starting fit on toxic\n",
+      "====================================\n",
+      "====================================\n",
+      "====================================\n",
+      "====================================\n",
+      "starting fit on severe_toxic\n",
+      "====================================\n",
+      "====================================\n",
+      "Train on 111699 samples, validate on 47872 samples\n",
+      "Epoch 1/3\n",
+      " 11904/111699 [==>...........................] - ETA: 27:02 - loss: 0.0697 - acc: 0.9892"
+     ]
+    }
+   ],
+   "source": [
+    "for label in labels:\n",
+    "    print(\"====================================\")\n",
+    "    print(\"====================================\")\n",
+    "    print(\"starting fit on\", label)\n",
+    "    print(\"====================================\")\n",
+    "    print(\"====================================\")\n",
+    "    if label == 'toxic':\n",
+    "        continue #already trained toxic\n",
+    "    \n",
+    "    #just reset the model, bc idk how to make sure it deletes old fit\n",
+    "    model = Sequential()\n",
+    "    #first layer is embedding, takes in size of vocab, 100 dim embedding, and 150 which is length of the comment \n",
+    "    model.add(Embedding(num_words, 100, input_length=150)) \n",
+    "    model.add(LSTM(100, dropout=0.2, recurrent_dropout=0.2))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "    \n",
+    "    #fit the data to the next label \n",
+    "    model.fit(data, np.array(y_train[label]), validation_split=.3, epochs=3)\n",
+    "    model_json = model.to_json()\n",
+    "    \n",
+    "    name_json = label + '.json'\n",
+    "    name_h5 = label + '.h5'\n",
+    "    \n",
+    "    #save into json file\n",
+    "    with open(name_json, \"w\") as json_file:\n",
+    "        json_file.write(model_json)\n",
+    "    \n",
+    "    # serialize weights to HDF5\n",
+    "    model.save_weights(name_h5)\n",
+    "    print(\"Saved\", label,\"to disk\")\n",
+    "    \n",
+    "    #lastly, evaluate on test \n",
+    "    score = model.evaluate(test_data, y_test[label])\n",
+    "    print(label,\"%s: %.2f%%\" % (model.metrics_names[1], score[1]*100))\n",
+    "    print(\"====================================\")\n",
+    "    print(\"====================================\")\n",
+    "    print(\"done with\", label,\"starting next fit\")\n",
+    "    print(\"====================================\")\n",
+    "    print(\"====================================\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -726,11 +860,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "general notes:\n",
+    "\n",
+    "i feel like we should train the length of comment as a hyperparameter. need to figure out how long most comments are and set to that, not arbitrarily 150. find most common length, medial length, etc. worried that the current model is cutting off any hashtags at the end, etc. "
+   ]
   }
  ],
  "metadata": {
