added reddit data, yea!

--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -856,7 +856,7 @@
    "source": [
     "#load the pandas datasets into a tensor\n",
     "# train = tf.data.Dataset.from_tensor_slices((X_train.values, y_train.values))\n",
-    "# test = tf.data.Dataset.from_tensor_slices((X_test.values, y_test.values))\n"
+    "# test = tf.data.Dataset.from_tensor_slices((X_test.values, y_test.values))"
    ]
   },
   {
@@ -885,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
