--- a/guy_workbook.ipynb
+++ b/guy_workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,10 @@
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics import precision_recall_fscore_support, classification_report, accuracy_score\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "\n",
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
@@ -194,25 +197,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from keras.models import Sequential \n",
-    "from keras.layers import Dense, Activation "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -270,13 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "model = Sequential()\n",
-    "model.add( Dense(units=128, input_shape(1,1)) )\n",
-    "model.add(Activation('tanh'))\n",
-    "model.add( Dense(units=128, input_shape(1,1)) )\n",
-    "model.add(Activation('tanh'))\n",
-    "model.add( Dense(units=128, input_shape(1,1)) )\n",
-    "model.add(Activation('tanh'))"
+    "MLPClassifier"
    ]
   }
  ],
