--- a/CS230 Content Moderation Project.ipynb
+++ b/CS230 Content Moderation Project.ipynb
@@ -48,24 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('./data/train.csv')\n",
-    "test = pd.read_csv('./data/test.csv')\n",
-    "subm = pd.read_csv('./data/sample_submission.csv')\n",
-    "labels = ['toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']\n",
-    "train['none'] = 1-train[labels].max(axis=1) #make an indicator for when there is no \n",
-    "                                            #value for any of the labels \n",
-    "#cant have any of the unknown values \n",
-    "train['comment_text'].fillna(\"unknown\", inplace=True)\n",
-    "test['comment_text'].fillna(\"unknown\", inplace=True)"
+    "# train = pd.read_csv('./data/train.csv')\n",
+    "# test = pd.read_csv('./data/test.csv')\n",
+    "# subm = pd.read_csv('./data/sample_submission.csv')\n",
+    "# labels = ['toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']\n",
+    "# train['none'] = 1-train[labels].max(axis=1) #make an indicator for when there is no \n",
+    "#                                             #value for any of the labels \n",
+    "# #cant have any of the unknown values \n",
+    "# train['comment_text'].fillna(\"unknown\", inplace=True)\n",
+    "# test['comment_text'].fillna(\"unknown\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +100,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, y_train, X_test, y_test = load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>toxic</th>\n",
+       "      <th>severe_toxic</th>\n",
+       "      <th>obscene</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>insult</th>\n",
+       "      <th>identity_hate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159566</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159567</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159568</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159569</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159570</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>159571 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        toxic  severe_toxic  obscene  threat  insult  identity_hate\n",
+       "0           0             0        0       0       0              0\n",
+       "1           0             0        0       0       0              0\n",
+       "2           0             0        0       0       0              0\n",
+       "3           0             0        0       0       0              0\n",
+       "4           0             0        0       0       0              0\n",
+       "...       ...           ...      ...     ...     ...            ...\n",
+       "159566      0             0        0       0       0              0\n",
+       "159567      0             0        0       0       0              0\n",
+       "159568      0             0        0       0       0              0\n",
+       "159569      0             0        0       0       0              0\n",
+       "159570      0             0        0       0       0              0\n",
+       "\n",
+       "[159571 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = ['toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']\n",
+    "X_train['none'] = 1-y_train[labels].max(axis=1) #make an indicator for when there is no \n",
+    "X_train['label'] = y_train.values.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>none</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0000997932d777bf</td>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000103f0d9cfb60f</td>\n",
+       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000113f07ec002fd</td>\n",
+       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0001b41b1c6bb37e</td>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0001d958c54c6e35</td>\n",
+       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159566</th>\n",
+       "      <td>ffe987279560d7ff</td>\n",
+       "      <td>\":::::And for the second time of asking, when ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159567</th>\n",
+       "      <td>ffea4adeee384e90</td>\n",
+       "      <td>You should be ashamed of yourself \\n\\nThat is ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159568</th>\n",
+       "      <td>ffee36eab5c267c9</td>\n",
+       "      <td>Spitzer \\n\\nUmm, theres no actual article for ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159569</th>\n",
+       "      <td>fff125370e4aaaf3</td>\n",
+       "      <td>And it looks like it was actually you who put ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159570</th>\n",
+       "      <td>fff46fc426af1f9a</td>\n",
+       "      <td>\"\\nAnd ... I really don't think you understand...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>143346 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      id                                       comment_text  \\\n",
+       "0       0000997932d777bf  Explanation\\nWhy the edits made under my usern...   \n",
+       "1       000103f0d9cfb60f  D'aww! He matches this background colour I'm s...   \n",
+       "2       000113f07ec002fd  Hey man, I'm really not trying to edit war. It...   \n",
+       "3       0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...   \n",
+       "4       0001d958c54c6e35  You, sir, are my hero. Any chance you remember...   \n",
+       "...                  ...                                                ...   \n",
+       "159566  ffe987279560d7ff  \":::::And for the second time of asking, when ...   \n",
+       "159567  ffea4adeee384e90  You should be ashamed of yourself \\n\\nThat is ...   \n",
+       "159568  ffee36eab5c267c9  Spitzer \\n\\nUmm, theres no actual article for ...   \n",
+       "159569  fff125370e4aaaf3  And it looks like it was actually you who put ...   \n",
+       "159570  fff46fc426af1f9a  \"\\nAnd ... I really don't think you understand...   \n",
+       "\n",
+       "        none               label  \n",
+       "0          1  [0, 0, 0, 0, 0, 0]  \n",
+       "1          1  [0, 0, 0, 0, 0, 0]  \n",
+       "2          1  [0, 0, 0, 0, 0, 0]  \n",
+       "3          1  [0, 0, 0, 0, 0, 0]  \n",
+       "4          1  [0, 0, 0, 0, 0, 0]  \n",
+       "...      ...                 ...  \n",
+       "159566     1  [0, 0, 0, 0, 0, 0]  \n",
+       "159567     1  [0, 0, 0, 0, 0, 0]  \n",
+       "159568     1  [0, 0, 0, 0, 0, 0]  \n",
+       "159569     1  [0, 0, 0, 0, 0, 0]  \n",
+       "159570     1  [0, 0, 0, 0, 0, 0]  \n",
+       "\n",
+       "[143346 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train['none'] = 1-y_train[labels].max(axis=1)\n",
+    "#negatives y_trains\n",
+    "y_neg = y_train[y_train['none'] == 0]\n",
+    "\n",
+    "# #negatives\n",
+    "X_neg = X_train[X_train['none'] == 0]\n",
+    "\n",
+    "\n",
+    "#positive y_trains\n",
+    "y_pos = y_train[y_train['none'] == 1]\n",
+    "\n",
+    "#positive x_trains\n",
+    "X_pos = X_train[X_train['none'] == 1]\n",
+    "\n",
+    "#this is how you split out\n",
+    "label = pd.DataFrame(columns=labels)\n",
+    "label['toxic'] = X_train['label'].apply(lambda x: x[0])\n",
+    "label['severe_toxic'] = X_train['label'].apply(lambda x: x[1])\n",
+    "label['obscene'] = X_train['label'].apply(lambda x: x[2])\n",
+    "label['threat'] = X_train['label'].apply(lambda x: x[3])\n",
+    "label['insult'] = X_train['label'].apply(lambda x: x[4])\n",
+    "label['identity_hate'] = X_train['label'].apply(lambda x: x[5])\n",
+    "label"
    ]
   },
   {
