--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -57,9 +57,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of preprocc failed: Traceback (most recent call last):\n",
+      "  File \"/Users/Isabella_GC/anaconda3/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/Users/Isabella_GC/anaconda3/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/Users/Isabella_GC/anaconda3/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/Users/Isabella_GC/anaconda3/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/Users/Isabella_GC/Documents/SeniorYear/cs230/reddit_content_mod/preprocc.py\", line 43, in <module>\n",
+      "    from aug_functions import *\n",
+      "  File \"/Users/Isabella_GC/Documents/SeniorYear/cs230/reddit_content_mod/aug_functions.py\", line 1, in <module>\n",
+      "    from snorkel.preprocess.nlp import SpacyPreprocessor\n",
+      "ModuleNotFoundError: No module named 'snorkel'\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, y_train, X_test, y_test = load_data()\n",
     "X_train, X_test = preprocess(X_train, X_test)"
