--- a/guy_workbook.ipynb
+++ b/guy_workbook.ipynb
@@ -233,13 +233,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train, X_test, y_test = utils.load_reddit_data()\n",
-    "\n"
+    "X_train, y_train, X_test, y_test = utils.load_reddit_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -263,143 +262,83 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
+       "      <th>moderated</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1054068</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349140</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3641685</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>3040687</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1988232</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>63973</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2681013</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>63974</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63975</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63976</th>\n",
+       "      <th>1680118</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1725886</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330881</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>63977</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2193528</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>63978 rows × 6 columns</p>\n",
+       "<p>400701 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       toxic  severe_toxic  obscene  threat  insult  identity_hate\n",
-       "0          0             0        0       0       0              0\n",
-       "1          0             0        0       0       0              0\n",
-       "2          0             0        0       0       0              0\n",
-       "3          0             0        0       0       0              0\n",
-       "4          0             0        0       0       0              0\n",
-       "...      ...           ...      ...     ...     ...            ...\n",
-       "63973      0             0        0       0       0              0\n",
-       "63974      0             0        0       0       0              0\n",
-       "63975      0             0        0       0       0              0\n",
-       "63976      1             0        1       0       1              0\n",
-       "63977      0             0        0       0       0              0\n",
+       "         moderated\n",
+       "1054068          1\n",
+       "349140           1\n",
+       "3641685          0\n",
+       "3040687          0\n",
+       "1988232          1\n",
+       "...            ...\n",
+       "2681013          0\n",
+       "1680118          1\n",
+       "1725886          1\n",
+       "2330881          0\n",
+       "2193528          0\n",
        "\n",
-       "[63978 rows x 6 columns]"
+       "[400701 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train"
+    "y_test"
    ]
   },
   {
